--- a/default.conf
+++ b/default.conf
@@ -9,6 +9,6 @@ server {
     listen 9090;
 
     location / {
-        proxy_pass http://tomcat:8080/WebApp/;
+        proxy_pass http://tomcat:8080/WebApp;
     }
 }
