--- a/default.conf
+++ b/default.conf
@@ -1,14 +1,6 @@
 server {
-    listen 8881;
-    location / {
-        proxy_pass http://tomcat:8080/;
-    }
-}
-
-server {
     listen 9090;
-
     location / {
-        proxy_pass http://tomcat:8080/WebApp;
+        proxy_pass http://tomcat:8080/WebApp/;  # Must match WAR name
     }
 }
