--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: "3.8"
-
 services:
   tomcat:
-    build: .
+    image: uwinchester/pfa_app  # Built from Dockerfile
     container_name: tomcat-devsecops
-    expose:
-      - "8080"
+    ports:
+      - "8881:8080"  # Direct Tomcat access
     networks:
       - devsecops-net
 
@@ -17,8 +15,7 @@ services:
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "8881:8881"
-      - "9090:9090"
+      - "9090:9090"  
     networks:
       - devsecops-net
 
