--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen 9090;
+    listen 80;
     location / {
-        proxy_pass http://tomcat:8080/WebApp/;  # Must match WAR name
+        proxy_pass http://tomcat:8080/WebApp/;  
     }
 }
